# debugTraceCPP

./: .gitignore  CMakeCache.txt  CMakeCache.txt.prev  CMakeLists.txt  Makefile  README.md  appmy_parsing_trace  cmake_install.cmake  main.cpp  qtcsettings.cmake  tracecontroller.cpp  tracecontroller.h
.qt/: .qmlls.build.ini  .qmlls.build.ini.part  QtDeploySupport.cmake  QtDeployTargets.cmake  appmy_parsing_trace_qml.cmake  appmy_parsing_trace_res.cmake
.qt/deploy_qml_imports/: appmy_parsing_trace.cmake
.qt/qml_imports/: appmy_parsing_trace_build.cmake  appmy_parsing_trace_build.rsp  appmy_parsing_trace_conf.rsp
.qt/rcc/: appmy_parsing_trace_raw_qml_0.qrc  qmake_my_parsing_trace.qrc  qrc_appmy_parsing_trace_raw_qml_0.cpp  qrc_qmake_my_parsing_trace.cpp
.qtc_clangd/: compile_commands.json
.rcc/qmlcache/: all_aotstats.aotstatslist  appmy_parsing_trace_Main_qml.cpp  appmy_parsing_trace_Main_qml.cpp.aotstats  appmy_parsing_trace_qml_loader_file_list.rsp  module_appmy_parsing_trace.aotstatslist
.rcc/qmllint/: appmy_parsing_trace.rsp  appmy_parsing_trace_json.rsp  appmy_parsing_trace_module.rsp
Desktop-u041eu0442u043bu0430u0434u043au0430/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  appmy_parsing_trace  cmake_install.cmake
appmy_parsing_trace_autogen/: deps  mocs_compilation.cpp
meta_types/: appmy_parsing_trace_json_file_list.txt  appmy_parsing_trace_json_file_list.txt.timestamp  qt6appmy_parsing_trace_metatypes.json  qt6appmy_parsing_trace_metatypes.json.gen
my_parsing_trace/: Main.qml  appmy_parsing_trace_qml_module_dir_map.qrc  qmldir
(+887 files in other folders)
